--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ FC=gfortran
 # GFLAGS=-Wall -Wextra -pedantic -std=f2008 -g -O2 -fno-second-underscore -Wno-compare-reals -fcheck=all -fimplicit-none -fbacktrace -gdwarf-2 -fall-intrinsics -Wno-unused-function -fcheck=bounds -I/usr/local/include
 GFLAGS= -O -Wall -fbounds-check -g -Wno-uninitialized -I/usr/local/include
 
-CFLAGS=-openmp -llapack -lcfitsio -lm -g -O2
+CFLAGS= -llapack -lm -g -O2 #-lcfitsio -openmp 
 # -L/Users/antoinemarchal/mylib/cfitsio-master
 
 OUT=ROHSA
