--- a/src/Makefile
+++ b/src/Makefile
@@ -12,7 +12,7 @@ CFLAGS= -lm -g -O2 #-lcfitsio -openmp -llapack
 
 OUT=ROHSA
 
-all: blas.o lbfgsb.o linpack.o timer.o mod_constants.o mod_convert.o mod_inout.o mod_array.o mod_optimize.o mod_functions.o mod_start.o mod_rohsa.o main.o
+all: blas.o lbfgsb.o linpack.o timer.o mod_constants.o mod_convert.o mod_inout.o mod_array.o mod_optimize.o mod_optimize_lym.o mod_minimize.o mod_functions.o mod_start.o mod_rohsa.o main.o
 	$(FC) $^ $(CFLAGS) -o $(OUT)
 
 main.o: main.f90
@@ -42,6 +42,12 @@ mod_array.o: mod_array.f90
 	$(FC) $(GFLAGS) -c $^
 
 mod_optimize.o: mod_optimize.f90
+	$(FC) $(GFLAGS) -c $^
+
+mod_optimize_lym.o: mod_optimize_lym.f90
+	$(FC) $(GFLAGS) -c $^
+
+mod_minimize.o: mod_minimize.f90
 	$(FC) $(GFLAGS) -c $^
 
 mod_functions.o: mod_functions.f90
