--- a/src/Makefile
+++ b/src/Makefile
@@ -12,7 +12,7 @@ cflags= -lm -g -O2 #-lcfitsio -openmp -llapack
 
 OUT=ROHSA
 
-all: blas.o lbfgsb.o linpack.o timer.o fftpack5_1d.o mod_constants.o mod_math.o mod_convert.o mod_fft.o mod_inout.o mod_array.o mod_color.o mod_model.o mod_optimize.o mod_minimize.o mod_functions.o mod_start.o mod_rohsa.o main.o
+all: blas.o lbfgsb.o linpack.o timer.o fftpack5_1d.o mod_constants.o mod_random.o mod_math.o mod_convert.o mod_fft.o mod_inout.o mod_array.o mod_color.o mod_model.o mod_optimize.o mod_minimize.o mod_functions.o mod_start.o mod_rohsa.o main.o
 	$(FC) $^ $(CFLAGS) -o $(OUT)
 
 main.o: main.f90
@@ -34,6 +34,9 @@ fftpack5_1d.o: fftpack5_1d.f90
 
 #MY FILES
 mod_constants.o: mod_constants.f90
+	$(FC) $(GFLAGS) -c $^
+
+mod_random.o: mod_random.f90
 	$(FC) $(GFLAGS) -c $^
 
 mod_fft.o: mod_fft.f90
