rohsa-rm clean main

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,7 +12,7 @@ CFLAGS= -lm -g -O2 #-lcfitsio -openmp -llapack
 
 OUT=ROHSA-RM
 
-all: blas.o lbfgsb.o linpack.o timer.o mod_constants.o mod_convert.o mod_rw_data.o mod_array.o mod_read_parameters.o mod_optimize.o mod_minimize.o mod_functions.o mod_start.o mod_rohsa.o main.o
+all: blas.o lbfgsb.o linpack.o timer.o mod_constants.o mod_convert.o mod_read_parameters.o mod_rw_data.o mod_array.o mod_optimize.o mod_minimize.o mod_functions.o mod_start.o mod_rohsa.o main.o
 	$(FC) $^ $(CFLAGS) -o $(OUT)
 
 main.o: main.f90
