clean mod_rohsa rohsa-rm

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,8 +4,8 @@ FC=gfortran
 
 # GFLAGS=-Wall -Wextra -pedantic -std=f2008 -g -O2 -fno-second-underscore -Wno-compare-reals -fcheck=all -fimplicit-none -fbacktrace -gdwarf-2 -fall-intrinsics -Wno-unused-function -fcheck=bounds -I/usr/local/include
 
-# GFLAGS= -O2 -I/usr/local/include -ffixed-line-length-none -Wno-uninitialized -Wall -fbounds-check
-GFLAGS= -O2 -I/usr/local/include -ffixed-line-length-none #-fbounds-check
+GFLAGS= -O2 -I/usr/local/include -ffixed-line-length-none -Wno-uninitialized -Wall -fbounds-check
+# GFLAGS= -O2 -I/usr/local/include -ffixed-line-length-none #-fbounds-check
 
 CFLAGS= -lm -g -O2 #-lcfitsio -openmp -llapack
 # -L/Users/antoinemarchal/mylib/cfitsio-master
